--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <h1>Vice Versa</h1>
-<form>
-	<textarea cols="50" rows="10" name="usertag"></textarea>
+<form action="{% url 'reverse' %}">
+	<textarea cols="50" rows="10" name="usertext"></textarea>
 	<br>
 	<input type="submit" name="reverse!">
 </form>
